alert botton fix

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -48,6 +48,8 @@ button {
     background-color: #8b4513;
     color: #fff;
     border: none;
+    border-radius: 2px;
+    font-family: 'Courier New', Courier, monospace;
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
@@ -259,3 +261,46 @@ color: #000;
     box-sizing: border-box;
     font-family: David;
   }
+
+  /* Centered Alert Box */
+.alert-box {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    z-index: 999;
+    max-width: 80%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.alert-box h2 {
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+.alert-box p {
+    font-size: 16px;
+    line-height: 1.5;
+}
+
+
+.alert-box button:hover {
+    background-color: #a0522d;
+}
+
+.report-container {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    background-color: white;
+    border: 2px solid black;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    max-width: 80%;
+}
