--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -9,7 +9,7 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'David';
     color: #fff;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
 }
@@ -38,7 +38,7 @@ main {
     border: 2px solid #fff;
     background-color: transparent;
     color: #fff;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'David';
     font-size: 16px;
     width: 80%;
     box-sizing: border-box;
@@ -49,9 +49,9 @@ button {
     color: #fff;
     border: none;
     border-radius: 2px;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'David';
     padding: 10px 20px;
-    font-size: 16px;
+    font-size: 20px;
     cursor: pointer;
     margin: 5px;
     transition: background-color 0.3s ease;
@@ -106,12 +106,12 @@ header h1 {
 .intro h1 {
     font-size: 40px;
     padding-bottom: 20px;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'David';
 }
 
 .intro p {
     font-size: x-large;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'David';
 }
 
 .intro button {
@@ -121,7 +121,7 @@ header h1 {
     padding: 15px;
     border-radius: 12px;
     cursor: crosshair;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'David';
 }
 
 .intro button:hover {
@@ -230,18 +230,18 @@ background-color: #a0522d;
 }
 
 .sidemenu .title {
-font-size: 20px;
+font-size: 30px;
 font-weight: bold;
 padding: 10px;
 }
 .sidemenu .subtitle {
-    font-size: 15px;
+    font-size: 22px;
     font-weight: bold;
     padding: 10px;
 }
 
 .sidemenu .subsubtitle {
-    font-size: 15px;
+    font-size: 20px;
     padding: 10px;
 }
 
@@ -268,7 +268,7 @@ color: #000;
     padding: 5px;
     margin: 5px 0;
     border: 2px solid #a0522d;
-    font-size: 14px;
+    font-size: 16px;
     width: 80%;
     box-sizing: border-box;
     font-family: David;
@@ -291,15 +291,14 @@ color: #000;
 }
 
 .alert-box h2 {
-    font-size: 24px;
+    font-size: 26px;
     margin-bottom: 10px;
 }
 
 .alert-box p {
-    font-size: 16px;
+    font-size: 22px;
     line-height: 1.5;
 }
-
 
 .alert-box button:hover {
     background-color: #a0522d;
@@ -315,4 +314,9 @@ color: #000;
     border: 2px solid black;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
     max-width: 80%;
+}
+
+#status h3 {
+    font-weight: normal;
+    font-size: 20px;
 }
